
[tool.poetry]
name = "open_horde_proxy"
version = "0.1.0"
description = "A proxy tool converting OpenAI requests to AI Horde using a Flask API."
authors = ["Tobias Boese <tobias.boese@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0"
horde-sdk = "^0.1.0"
python-dotenv = "^0.19.2"
Pillow = "^8.4.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
